[gd_scene load_steps=6 format=2]

[ext_resource path="res://InsidePlayerHouse/DisplayHouseObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound effects/UI/button select.mp3" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="DisplayHouseObject" type="Node2D"]
script = ExtResource( 1 )

[node name="HouseImageTextureRect" type="TextureRect" parent="."]
grow_vertical = 0
mouse_filter = 2

[node name="CollisionBox" type="Area2D" parent="."]
position = Vector2( 16, -16 )
collision_layer = 64
collision_mask = 64
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBox"]
shape = SubResource( 3 )

[node name="MovementCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollision"]
position = Vector2( 16, -16 )
shape = SubResource( 2 )

[node name="MouseInputBox" type="Area2D" parent="."]
position = Vector2( 16, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInputBox"]
shape = SubResource( 4 )

[node name="ColorIndicator" type="Sprite" parent="."]
z_index = 1
offset = Vector2( -16, -16 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[connection signal="area_entered" from="CollisionBox" to="." method="_on_CollisionBox_area_entered"]
[connection signal="area_exited" from="CollisionBox" to="." method="_on_CollisionBox_area_exited"]
[connection signal="body_entered" from="CollisionBox" to="." method="_on_CollisionBox_body_entered"]
[connection signal="input_event" from="MouseInputBox" to="." method="_on_MouseInputBox_input_event"]
